--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "grunt": "^0.4.5",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   }
 }
